changes in deploy file

--- a/app-deploy/values.yaml
+++ b/app-deploy/values.yaml
@@ -16,6 +16,7 @@ appExtConfig:
   RAILS_ENV: "production"
   RAILS_LOG_TO_STDOUT: "true"
   REDIS_URL : "redis://redis-master.redis.svc.cluster.local"
+  DOMAIN_URL : "https://meril-101378-ruby.b101378.dev.eastus.az.svc.builder.cafe/"
   # A change to RAILS_MAX_THREADS might affect the 
   # resource limits set below so that needs to be taken into consideration.
   RAILS_MAX_THREADS: "10"
