add announcement feature in doctor

--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -67,6 +67,7 @@ gem 'bx_block_payment_admin', '0.0.2'
 gem 'builder_base', '0.0.45'
 gem 'sassc-rails'
 gem 'activeadmin'
+gem 'active_storage_base64'
 gem 'active_admin_role'
 gem 'activeadmin_json_editor'
 gem 'active_admin_datetimepicker'
